<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
            
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_smsintro"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33B5E5" />

    <EditText
        android:id="@+id/settings_smsintro_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_smsintro_hint" />
   
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_smsbody"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33B5E5" />

    <EditText
        android:id="@+id/settings_smsbody_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_smsbody_hint" />

    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:text="@string/settings_checkboxbody"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33B5E5" />

    <EditText
        android:id="@+id/settings_checkboxbody_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_checkboxbody_hint" />

    
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:text="@string/settings_checkboxbody_description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33B5E5" />

    <EditText
        android:id="@+id/settings_checkboxbody_description_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/settings_checkboxbody_description_hint" />
    
    <!--
    <LinearLayout
        android:id="@+id/laytboxs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        >

        <CheckBox
            android:id="@+id/settings_checkbox1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_checkbox1" />

        <CheckBox
            android:id="@+id/settings_checkbox2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_checkbox2" />
           
    </LinearLayout>
     -->
    
     <LinearLayout
        android:id="@+id/laytbtns"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
         >
        <Button
            android:id="@+id/savebutton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:textColor="#33B5E5"
            android:background="#303030"
            android:text="@string/settings_button1"/>
        
            <Button
             android:id="@+id/helpButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/settings_button2" />
            

            
        <Button
             android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/settings_button3" />
    </LinearLayout>

     <Button
         android:id="@+id/checkMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/settings_button4" />

         <TextView
        android:id="@+id/completed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_text"
        android:textColor="#33B5E5" />


</LinearLayout>
</ScrollView>