<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/toptext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030"
        android:text="@string/toptext"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33B5E5"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/toptext2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303030"
        android:text="@string/toptext2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33B5E5" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_name" >
    </EditText>

    <EditText
        android:id="@+id/edit_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_number"
        android:inputType="phone" />

    <LinearLayout
        android:id="@+id/laytboxs22"
        android:layout_width="match_parent"
        android:layout_height="26dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/thank1s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/thanks"
            android:textColor="#33B5E5"
            android:layout_weight="0.01" />

        <Button
            android:id="@+id/enterbox"
            android:layout_width="217dp"
            android:layout_height="match_parent"
            android:layout_weight="0.99"
            android:background="#303030"
            android:onClick="sendText"
            android:text="@string/button_send"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <TextView
        android:id="@+id/space" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <CheckBox
        android:id="@+id/sexycheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sexyBoolean"
        android:paddingTop="10dp"
        android:text="@string/sexycheckbox" />

</LinearLayout>